UI: Remove duplicate Exercise Summary header and add icon to toggle

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h3 id="summaryToggle"
                         style="cursor: pointer; user-select: none; padding: 10px; background: #f5f5f5; border-radius: 4px;">
                         <span class="chevron" style="display: inline-block; transition: transform 0.3s ease;">▼</span>
-                        Exercise Summary
+                        📊 Exercise Summary
                     </h3>
                     <div id="statsTableContent">
                         <!-- Summary table grouped by category -->
