Add sorting functionality to the exercise breakdown heatmap

--- a/index.html
+++ b/index.html
@@ -191,7 +191,12 @@
                 <!-- Consistency Tracker (Secondary) -->
                 <div id="consistencyTracker" class="consistency-tracker">
                     <div class="matrix-container section-card" id="heatmapContainer">
-                        <h4>Exercise Breakdown (Sessions per Week)</h4>
+                        <div class="matrix-header-line">
+                            <h4>Exercise Breakdown (Sessions per Week)</h4>
+                            <div id="heatmapControls" class="matrix-controls">
+                                <!-- Sort buttons will be injected here -->
+                            </div>
+                        </div>
                         <div class="matrix-wrapper">
                             <div id="exerciseMatrix" class="exercise-matrix">
                                 <!-- Matrix will be injected here -->
