--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@
                                 <div id="lastWorkoutInfo" class="last-workout-info" style="display: none;"></div>
                             </div>
 
-                            <div class="form-group">
-                                <input type="number" id="workoutReps" min="1" max="999" placeholder="Reps" required
-                                    aria-required="true" aria-label="Number of repetitions">
-                            </div>
+                            <div class="form-group-row">
+                                <div class="form-group">
+                                    <input type="number" id="workoutReps" min="1" max="999" placeholder="Reps" required
+                                        aria-required="true" aria-label="Number of repetitions">
+                                </div>
 
-                            <div class="form-group" id="weightGroup">
-                                <input type="number" id="workoutWeight" min="0" step="any" placeholder="Weight (kg)"
-                                    aria-label="Weight in kilograms">
+                                <div class="form-group" id="weightGroup">
+                                    <input type="number" id="workoutWeight" min="0" step="any" placeholder="Weight (kg)"
+                                        aria-label="Weight in kilograms">
+                                </div>
                             </div>
 
                             <div class="form-group">
