--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
                             </select>
                         </div>
 
+                        <div class="form-group">
+                            <label for="muscle">
+                                Target Muscle <span class="required" aria-label="required">*</span>
+                            </label>
+                            <select id="muscle" required aria-required="true">
+                                <option value="">-- Select Muscle --</option>
+                                <option value="chest">Chest</option>
+                                <option value="back">Back</option>
+                                <option value="shoulders">Shoulders</option>
+                                <option value="legs">Legs</option>
+                                <option value="arms">Arms</option>
+                                <option value="core">Core</option>
+                                <option value="neck">Neck</option>
+                                <option value="full-body">Full Body</option>
+                            </select>
+                        </div>
+
                         <div class="form-actions">
                             <button type="submit" class="btn btn-primary">Save Exercise</button>
                             <button type="button" id="cancelExerciseBtn" class="btn btn-secondary">Cancel</button>
@@ -200,11 +217,7 @@
                     </form>
                 </div>
 
-                <!-- Recent Workouts -->
-                <div class="section-header">
-                    <h3>Latest Exercises</h3>
-                </div>
-                <div id="recentWorkoutsList" class="workout-list"></div>
+
             </section>
 
             <!-- History Section -->
