--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <input type="date" id="workoutDate" required aria-required="true"
-                                    aria-label="Workout date">
-                            </div>
-
                             <div class="form-actions-inline">
+                                <div class="date-input-container" title="Workout Date">
+                                    <i data-lucide="calendar" class="date-icon"></i>
+                                    <input type="date" id="workoutDate" required aria-required="true"
+                                        aria-label="Workout date">
+                                </div>
                                 <button type="submit" class="btn-icon btn-primary" title="Log Workout"
                                     aria-label="Log workout">
                                     <i data-lucide="check"></i>
