--- a/index.html
+++ b/index.html
@@ -178,41 +178,49 @@
 
                 <div class="form-container">
                     <form id="workoutFormElement" class="compact-workout-form">
-                        <div class="form-row">
+                        <!-- Row 1: Muscle -->
+                        <div class="form-group">
+                            <select id="workoutMuscle" aria-label="Filter by muscle">
+                                <option value="">All Muscles</option>
+                            </select>
+                        </div>
+
+                        <!-- Row 2: Exercise -->
+                        <div class="form-group">
+                            <select id="workoutExercise" required aria-required="true" aria-label="Select exercise">
+                                <option value="">Select Exercise...</option>
+                            </select>
+                            <div id="lastWorkoutInfo" class="last-workout-info" style="display: none;"></div>
+                        </div>
+
+                        <!-- Row 3: Reps/Weight -->
+                        <div class="form-group-row">
                             <div class="form-group">
-                                <select id="workoutExercise" required aria-required="true" aria-label="Select exercise">
-                                    <option value="">Select Exercise...</option>
-                                </select>
-                                <div id="lastWorkoutInfo" class="last-workout-info" style="display: none;"></div>
+                                <input type="number" id="workoutReps" min="1" max="999" placeholder="Reps" required
+                                    aria-required="true" aria-label="Number of repetitions">
                             </div>
 
-                            <div class="form-group-row">
-                                <div class="form-group">
-                                    <input type="number" id="workoutReps" min="1" max="999" placeholder="Reps" required
-                                        aria-required="true" aria-label="Number of repetitions">
-                                </div>
-
-                                <div class="form-group" id="weightGroup">
-                                    <input type="number" id="workoutWeight" min="0" step="any" placeholder="Weight (kg)"
-                                        aria-label="Weight in kilograms">
-                                </div>
+                            <div class="form-group" id="weightGroup">
+                                <input type="number" id="workoutWeight" min="0" step="any" placeholder="Weight (kg)"
+                                    aria-label="Weight in kilograms">
                             </div>
+                        </div>
 
-                            <div class="form-actions-inline">
-                                <div class="date-input-container" title="Workout Date">
-                                    <i data-lucide="calendar" class="date-icon"></i>
-                                    <input type="date" id="workoutDate" required aria-required="true"
-                                        aria-label="Workout date">
-                                </div>
-                                <button type="submit" class="btn-icon btn-primary" title="Log Workout"
-                                    aria-label="Log workout">
-                                    <i data-lucide="check"></i>
-                                </button>
-                                <button type="button" id="clearWorkoutBtn" class="btn-icon btn-secondary"
-                                    title="Clear Form" aria-label="Clear form">
-                                    <i data-lucide="x"></i>
-                                </button>
+                        <!-- Row 4: Actions (Date, Log, Clear) -->
+                        <div class="form-actions-inline">
+                            <div class="date-input-container" title="Workout Date">
+                                <i data-lucide="calendar" class="date-icon"></i>
+                                <input type="date" id="workoutDate" required aria-required="true"
+                                    aria-label="Workout date">
                             </div>
+                            <button type="submit" class="btn-icon btn-primary" title="Log Workout"
+                                aria-label="Log workout">
+                                <i data-lucide="check"></i>
+                            </button>
+                            <button type="button" id="clearWorkoutBtn" class="btn-icon btn-secondary" title="Clear Form"
+                                aria-label="Clear form">
+                                <i data-lucide="x"></i>
+                            </button>
                         </div>
                     </form>
                 </div>
