The weekly performance chart has been updated to show curves for exercises performed per muscle group, replacing the single "Different Exercises" line.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="dashboard-main-chart">
                         <div class="section-card">
                             <h4 style="display: flex; align-items: center; gap: 8px;">
-                                <i data-lucide="bar-chart-3"></i> Weekly Performance (Volume & Frequency)
+                                <i data-lucide="bar-chart-3"></i> Weekly Activity by Muscle Group
                             </h4>
                             <div class="chart-wrapper" style="height: 250px;">
                                 <canvas id="weeklyVolumeChart"></canvas>
