Muscle Group Performance breakdown in the Statistics section

--- a/index.html
+++ b/index.html
@@ -242,6 +242,16 @@
                         <!-- KPI Cards will be injected here -->
                     </div>
 
+                    <!-- Muscle Group Breakdown (NEW) -->
+                    <div id="muscleBreakdownSection" class="muscle-breakdown-section" style="margin-bottom: 30px;">
+                        <h4 style="display: flex; align-items: center; gap: 8px; margin-bottom: 15px;">
+                            <i data-lucide="biceps-flexed"></i> Muscle Group Performance
+                        </h4>
+                        <div class="muscle-grid" id="muscleGrid">
+                            <!-- Muscle Group Cards will be injected here -->
+                        </div>
+                    </div>
+
                     <!-- Weekly Performance Chart (Main Dashboard Focus) -->
                     <div class="dashboard-main-chart">
                         <div class="section-card">
